--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,46 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    </head>
 
-  <body>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-  <% if user_signed_in? %>
-    <p><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></p>
-  <% end %>
-  
-    <%= yield %>
-  </body>
+  <body class="text-center">
+    <div class="wrapper">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/">タスク管理アプリ</a>
+      <% if !current_user.nil? %>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link" href="#">マイタスク</a>
+              <a class="nav-item nav-link" href="#">タスク一覧</a>
+              <a class="nav-item nav-link" href="#">ユーザー設定</a>
+              <a class="nav-item nav-link disabled" href="#"><%= link_to("ログアウト", "/users/sign_out", {method: :DELETE})%></a>
+            </div>
+          </div>
+      <% else %>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link" href="/users/sign_up">sign up</a>
+            <a class="nav-item nav-link" href="/users/sign_in">sign in</a>
+          </div>
+        </div>
+      <% end %>
+      </nav>
+    <main class="layout">
+      <div class="container-fluid py-4 mw-md">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <% if user_signed_in? %>
+        <p><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></p>
+      <% end %>
+      <%= yield %>
+      </div>
+    </main>
+    <footer>
+      <p>© All rights reserved by hashino</p>
+    </footer>
+  </div>
 </html>
