ユーザーネームを変更できるようにしたなど

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-item nav-link" href="#">マイタスク</a>
-              <a class="nav-item nav-link" href="#">タスク一覧</a>
-              <a class="nav-item nav-link" href="#">ユーザー設定</a>
+              <a class="nav-item nav-link" href="/">タスク一覧</a>
+              <a class="nav-item nav-link" href="/users/edit">ユーザー設定</a>
               <a class="nav-item nav-link disabled" href="#"><%= link_to("ログアウト", "/users/sign_out", {method: :DELETE})%></a>
             </div>
           </div>
