--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Task</h1>
 
-<%= render 'form', task: @task %>
+<%= render 'edit', task: @task %>
 
 <%= link_to 'Show', @task %> |
 <%= link_to 'Back', tasks_path %>
