--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -32,7 +32,7 @@
 
   <div class="field">
     <%= form.label :status %>
-    <%= form.select :status, [['未対応',0],['完了',1]] %>
+    <%= form.select :status, [['未対応',0],['対応中',1]] %>
   </div>
 
   <div class="actions">
