--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,9 +7,9 @@
     <tr>
       <th>Title</th>
       <th>Content</th>
-      <th>Deadline</th>
-      <th>User</th>
-      <th>Status</th>
+      <th>期限: </th>
+      <th>担当者: </th>
+      <th>ステータス: </th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,16 +20,14 @@
         <td><%= task.title %></td>
         <td><%= task.content %></td>
         <td><%= task.deadline %></td>
-        <td><%= task.user_id %></td>
+        <td><%= task.user.name %></td>
         <td><%= task.status %></td>
         <td><%= link_to 'Show', task %></td>
+      <% if task.user_id.to_i == current_user.id %>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <% end %>
+        </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Task', new_task_path %>
