--- a/app/views/tasks/mytask.html.erb
+++ b/app/views/tasks/mytask.html.erb
@@ -1,5 +1,11 @@
 <p id="notice"><%= notice %></p>
 
+<h1>マイタスク</h1>
+
+<%= link_to 'New Task', new_task_path %>
+
+<br>
+
 <table>
   <thead>
     <tr>
@@ -14,16 +20,18 @@
 
   <tbody>
     <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.title %></td>
-        <td><%= task.content %></td>
-        <td><%= task.deadline %></td>
-        <td><%= task.user_id %></td>
-        <td><%= task.status %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <% if task.user_id.to_i == current_user.id %>
+        <tr>
+          <td><%= task.title %></td>
+          <td><%= task.content %></td>
+          <td><%= task.deadline %></td>
+          <td><%= task.user.name %></td>
+          <td><%= task.status %></td>
+          <td><%= link_to 'Show', task %></td>
+          <td><%= link_to 'Edit', edit_task_path(task) %></td>
+          <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
