--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,33 +1,34 @@
 <p id="notice"><%= notice %></p>
 
 <h1>タスク一覧</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>期限: </th>
-      <th>担当者: </th>
-      <th>ステータス: </th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="container">
+  <div class="row">
     <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.title %></td>
-        <td><%= task.content %></td>
-        <td><%= task.deadline %></td>
-        <td><%= task.user.name %></td>
-        <td><%= task.status %></td>
-        <td><%= link_to 'Show', task %></td>
-      <% if task.user_id.to_i == current_user.id %>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      <% end %>
-        </tr>
+      <div class="card border-primary mb-4" style="max-width: 40rem;">
+        <div class="card-header"><%= task.title %>
+        </div>
+        <div class="card-body text-primary">
+          <h5 class="card-title"><%= task.content %></h5>
+          <p class="card-text">
+          期限: <%= task.deadline %><br>
+          担当者: <%= task.user.name %><br>
+          ステータス: 
+          <% if task.status == 0 %>
+          未対応
+          <% elsif task.status == 1  %>
+          対応中
+          <% else %>
+          完了
+          <% end %>
+          
+          </p>
+          <%= link_to '詳細', task %>
+          <% if task.user_id.to_i == current_user.id %>
+            <%= link_to '編集', edit_task_path(task) %><br>
+            <%= link_to '削除', task, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <% end %>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
+</div>
