--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -25,5 +25,5 @@
   <%= @task.status %>
 </p>
 
-<%= link_to 'Edit', edit_task_path(@task) %> |
-<%= link_to 'Back', tasks_path %>
+<%= link_to '編集', edit_task_path(@task) %> |
+<%= link_to '戻る', tasks_path %>
