--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -13,17 +13,17 @@
 
   <div class="field">
     <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= form.label :content %>
-    <%= form.text_area :content %>
+    <%= form.text_area :content, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= form.label :deadline %>
-    <%= form.date_select :deadline %>
+    <%= form.date_select :deadline, class: "form-control" %>
   </div>
 
   <div class="field">
@@ -32,10 +32,10 @@
 
   <div class="field">
     <%= form.label :status %>
-    <%= form.select :status, [['未対応',0],['対応中',1]] %>
+    <%= form.select :status, [['未対応',0],['対応中',1]], class: "form-control" %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "登録する", class: "btn btn-success" %>
   </div>
 <% end %>
