--- a/app/views/tasks/mytask.html.erb
+++ b/app/views/tasks/mytask.html.erb
@@ -2,7 +2,7 @@
 
 <h1>マイタスク</h1>
 
-<%= link_to 'New Task', new_task_path %>
+<%= link_to 'New Task', new_task_path, class: "btn btn-light" %>
 
 <br>
 
@@ -30,10 +30,10 @@
             <% end %>
             
             </p>
-            <%= link_to '詳細', task %>
+            <%= link_to '詳細', task, class: "btn btn-light" %>
             <% if task.user_id.to_i == current_user.id %>
-              <%= link_to '編集', edit_task_path(task) %><br>
-              <%= link_to '削除', task, method: :delete, data: { confirm: 'Are you sure?' } %>
+              <%= link_to '編集', edit_task_path(task), class: "btn btn-primary" %><br>
+              <%= link_to '削除', task, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
             <% end %>
           </div>
         </div>
@@ -56,10 +56,10 @@
             完了
           <% end %>
           </p>
-          <%= link_to '詳細', task %>
+          <%= link_to '詳細', task, class: "btn btn-light" %>
           <% if task.user_id.to_i == current_user.id %>
-            <%= link_to '編集', edit_task_path(task) %><br>
-            <%= link_to '削除', task, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= link_to '編集', edit_task_path(task), class: "btn btn-primary" %>
+            <%= link_to '削除', task, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
           <% end %>
         </div>
       </div>
