--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -17,10 +17,10 @@
           <% end %>
           </p>
           <% if @task.user_id.to_i == current_user.id %>
-            <%= link_to '編集', edit_task_path(@task) %> |
-            <%= link_to 'アサイン', '/tasks/:id/assign', method: :get %>
+            <%= link_to '編集', edit_task_path(@task), class: "btn btn-primary" %> |
+            <%= link_to 'アサイン', '/tasks/:id/assign', method: :get, class: "btn btn-success" %>
           <% end %>
-          <%= link_to '戻る', tasks_path %>
+          <%= link_to '一覧へ戻る', tasks_path, class: "btn btn-light" %>
         </div>
     </div>
 </div>
