データ型変更

--- a/app/views/tasks/_edit.html.erb
+++ b/app/views/tasks/_edit.html.erb
@@ -23,7 +23,7 @@
   
     <div class="field">
       <%= form.label :deadline %>
-      <%= form.date_select :deadline, class: "form-control" %>
+      <%= form.datetime_select :deadline, class: "form-control" %>
     </div>
   
     <div class="field">
