--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
               <a class="nav-item nav-link" href="/mytask">マイタスク</a>
               <a class="nav-item nav-link" href="/tasks">タスク一覧</a>
               <a class="nav-item nav-link" href="/users/edit">ユーザー設定</a>
-              <a class="nav-item nav-link disabled" href="#"><%= link_to("ログアウト", "/users/sign_out", {method: :DELETE})%></a>
+              <%= link_to("ログアウト", "/users/sign_out", { method: :DELETE, class: "nav-item nav-link"}) %>
             </div>
           </div>
       <% else %>
