フッターの削除

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
       <%= yield %>
       </div>
     </main>
-    <footer>
+    <!--<footer>
       <p>© All rights reserved by hashino</p>
-    </footer>
+    </footer>-->
 </html>
