パフォーマンスとか

--- a/app/views/tasks/_assign.html.erb
+++ b/app/views/tasks/_assign.html.erb
@@ -1,4 +1,4 @@
-新しくアサインするユーザー
+<p class="text-right">新しくアサインするユーザー</p>
 <%= form_with(model: @task,local: true) do |form|%>
   <div class="form">
     <div class="form-body">
