--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,10 +3,10 @@
 <h1>タスク一覧</h1>
 <div class="container">
   <div class="row">
-    <% @tasks.each do |task| %>
-      <% if (task.deadline - Date.today).to_i < 0 %>
+    <% @tasks.find_each do |task| %>
+      <% if (task.deadline - Time.now).to_i < 0 %>
       <%# 期限切れ　%>
-        <div class="card text-white bg-danger mb-4" style="max-width: 40rem;">
+        <div class="card text-white bg-danger mb-4 mx-2	" style="max-width: 40rem;">
           <div class="card-header bg-danger text-white"><%= task.title %>
           </div>
           <div class="card-body">
