layoutいじってる

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,27 @@
+@import 'bootstrap';
+@import 'scaffolds';
+@import 'tasks';
+.p-top {
+    min-width: 960px;
+    &__title {
+      text-align: center;
+      font-size: 16px;
+    }
+  
+    &__introduce {
+      margin: 0 auto;
+      th {
+          padding: 0 15px;
+      }
+      td {
+        padding: 0 15px;
+      }
+    }
+    &__paginate {
+      text-align: center;
+      margin:0 auto;
+    }
+  }
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
