インデント修正

--- a/app/views/tasks/mytask.html.erb
+++ b/app/views/tasks/mytask.html.erb
@@ -24,7 +24,7 @@
               未対応
             <% elsif task.status == 1  %>
               対応中
-            <% else %>
+              <% elsif task.status == 2  %>
               完了
             <% end %>
             
