ページネーションにブートストラップ

--- a/app/views/tasks/mytask.html.erb
+++ b/app/views/tasks/mytask.html.erb
@@ -64,6 +64,6 @@
       </div>
     <% end %>
   <% end %>
-  <div class='p-top__paginate'><%= paginate @tasks %></div>
+  <div class='p-top__paginate'><%= paginate @tasks, theme: 'twitter-bootstrap-4' %></div>
 </div>
 </div>
